Ajout des graphes

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ Scripts/Commands/test.py
 tempCodeRunnerFile.py
 Scripts/Interface/__pycache__/
 Scripts/Commands/__pycache__/
+Scripts/Gaphes/test.py
+Scripts/Gaphes/__pycache__/
